# VistaThemePlasma

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  INSTALL.md  README.md  compile.sh  install.sh  install_kwin_components.sh  install_misc_components.sh  install_plasma_components.sh  install_plasmoids.sh  migration-uninstall.sh  uninstall.sh
kwin/effects_cpp/aeroglide/src/: CMakeLists.txt  glide.cpp  glide.h  glide_config.cpp  metadata.json
kwin/effects_cpp/kde-effects-aeroglassblur/src/: CMakeLists.txt  aeroblur.qrc  blur.cpp  blur.h  blur.kcfg  metadata.json  wackyfunc.h
kwin/effects_cpp/kde-effects-aeroglassblur/src/kcm/: CMakeLists.txt  blur_config.cpp  mainwindow.cpp
kwin/effects_cpp/kde-effects-aeroglassblur/src/shaders/: basic.frag  basic_core.frag  downsample_core.frag  glow_core.frag  reflect.frag  reflect_core.frag  upsample.frag  upsample_core.frag
misc/: CMakeLists.txt
misc/branding/: kcm-about-distrorc
misc/defaulttooltip/: install.sh  install_ninja.sh  tooltiparea.cpp
misc/kvantum/: CMakeLists.txt
misc/kvantum/Kvantum/WindowsVistaKvantum_Aero/: WindowsVistaKvantum_Aero.kvconfig
misc/kvantum/WindowsVistaAero/: WindowsVistaAero.kvconfig
misc/plymouth/PlymouthVista/: PlymouthVista.plymouth  PlymouthVista.script  install.sh  lucon_disable_anti_aliasing.conf  plymouth_state_updater.sh
misc/plymouth/PlymouthVista/systemd/system/: update-plymouth-vista-state-boot.service
misc/plymouth/PlymouthVista/systemd/user/: update-plymouth-vista-state-logon.service
misc/shortcuts/: Windows Sidebar.desktop
misc/uac-polkitagent/: install.sh
misc/uac-polkitagent/patches/: CMakeLists.txt  QuickAuthDialog.cpp
misc/xdg/: CMakeLists.txt  kcm-about-distrorc  kdeglobals  ksplashrc  kvantum.kvconfig  kwinrc  smodrc  uacpolkitagentrc
misc/xdg/autostart/: x-vtpootb.desktop
plasma/plasmoids/: CMakeLists.txt
plasma/plasmoids/io.gitgud.catpswin56.battery/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.battery/contents/ui/: BatteryIcon.qml  BatteryItem.qml  CompactRepresentation.qml  FlyoutBatteryIcon.qml  InhibitionHint.qml  InhibitionItem.qml  PopupDialog.qml  PowerManagementItem.qml  PowerProfileItem.qml  TrayToolTip.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.desktop/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.desktop/contents/ui/: FolderItemDelegate.qml  FolderItemPreviewPluginsDialog.qml  FolderView.qml  PlasmoidContainer.qml  ResizeHandle.qml  SegmentedControl.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.desktopcontainment/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.desktopcontainment/contents/config/: config.qml  main.xml
plasma/plasmoids/io.gitgud.catpswin56.desktopcontainment/contents/ui/: FolderItemPreviewPluginsDialog.qml  FolderView.qml  FolderViewDialog.qml  FolderViewLayer.qml  PlasmoidContainer.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.digitalclocklite/contents/ui/: CalendarView.qml  CustomMonthView.qml  DigitalClock.qml  ToolTipCompact.qml  configAppearance.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.gadgets.clock/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.gadgets.clock/contents/config/: main.xml
plasma/plasmoids/io.gitgud.catpswin56.gadgets.clock/contents/ui/: Hand.qml  configGeneral.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.networkmanagement/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.networkmanagement/contents/ui/: ConfigGeneral.qml  ConnectionItem.qml  ConnectionListPage.qml  DetailsText.qml  DetailsWindow.qml  ExpandableListItem.qml  ListItem.qml  PopupDialog.qml  Tooltip.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.panel/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.panel/contents/ui/: LayoutManager.js  main.qml
plasma/plasmoids/io.gitgud.catpswin56.private.sidebar/contents/applet/: CompactApplet.qml
plasma/plasmoids/io.gitgud.catpswin56.private.sidebar/contents/config/: main.xml
plasma/plasmoids/io.gitgud.catpswin56.private.sidebar/contents/ui/: ConfigGeneral.qml  PlasmoidDelegate.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.sidebar/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.sidebar/contents/ui/: main.qml
plasma/plasmoids/io.gitgud.catpswin56.sidebartrayicon/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.sidebartrayicon/contents/ui/: main.qml
plasma/plasmoids/io.gitgud.catpswin56.vistadesktop/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.vistadesktop/contents/config/: config.qml  main.xml
plasma/plasmoids/io.gitgud.catpswin56.vistadesktop/contents/ui/: ConfigExtras.qml  ConfigIcons.qml  ConfigOverlay.qml  FolderItemDelegate.qml  FolderView.qml  FolderViewDialog.qml  FolderViewLayer.qml  main.qml
plasma/plasmoids/io.gitgud.catpswin56.vistastart/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.vistastart/contents/config/: main.xml
plasma/plasmoids/io.gitgud.catpswin56.vistastart/contents/ui/: ApplicationsView.qml  CompactRepresentation.qml  ConfigGeneral.qml  ConfigSidepanel.qml  (+20 more)
plasma/plasmoids/io.gitgud.catpswin56.vistatasks/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.volume/: metadata.json
plasma/plasmoids/io.gitgud.wackyideas.battery/: metadata.json
plasma/plasmoids/org.kde.plasma.notifications/: metadata.json
plasma/plasmoids/org.kde.plasma.systemtray/: metadata.json
plasma/plasmoids/src/: CMakeLists.txt
plasma/plasmoids/src/desktopcontainment_src/: CMakeLists.txt
plasma/plasmoids/src/notifications_src/: CMakeLists.txt
plasma/plasmoids/src/seventasks_src/: CMakeLists.txt
plasma/plasmoids/src/vistadesktop_src/: CMakeLists.txt  install.sh  install_ninja.sh
plasma/plasmoids/src/vistastart_src/: CMakeLists.txt
plasma/plasmoids/src/vistatasks_src/: CMakeLists.txt  Makefile  install.sh  install_manifest.txt
plasma/plasmoids/src/volume_src/: CMakeLists.txt  install.sh  install_ninja.sh
plasma/sddm/kcm/: CMakeLists.txt
plasma/sddm/kcm/src/: CMakeLists.txt  kcm.cpp  kcm.h  kcm_sddmsmod.json
plasma/vtpootb/src/: CMakeLists.txt  app.cpp  app.h  main.cpp  vtpootbconfig.kcfgc
(+488 files in other folders)
